# jack

./: .gitignore  CMakeLists.txt  ChilliDecompile.lua  DUMP_ANALYSIS.md  DUMP_ANALYZER.md  LICENSE  QUICK_START.md  README.md  README_FINAL.md  README_RU.md  STEAL_BRAINROT_INFO.md  StealBrainrotScript.lua  StealBrainrot_FINAL.lua  StealBrainrot_Working.lua  TECHNICAL_SUMMARY.md  WORKING_SCRIPT_INFO.md  build.bat  build.gradle.kts  dump.txt  gradle.properties  index.html  script.js  settings.gradle.kts  setup_deps.sh  styles.css  theme.tss
ScarryExecutor/: CMakeLists.txt  README.md  build.bat  test_script.lua
ScarryExecutor/dll/: dllmain.cpp  lua_hooks.cpp  lua_hooks.h  memory_utils.cpp  memory_utils.h
ScarryExecutor/include/: anticheat_bypass.h  gui.h  injector.h  ipc.h  process_utils.h
ScarryExecutor/src/: anticheat_bypass.cpp  gui.cpp  injector.cpp  ipc.cpp  main.cpp  process_utils.cpp
src/: main.cpp
src/communication/: pipe_manager.cpp  pipe_manager.h
src/dll/: dll_main.cpp  hooks.cpp  hooks.h  lua_executor.cpp  lua_executor.h
src/gui/: gui_manager.cpp  gui_manager.h
src/injector/: dll_injector.cpp  dll_injector.h
src/main/kotlin/ru/potionmixer/: PotionMixerPlugin.kt
src/main/kotlin/ru/potionmixer/commands/: CauldronCommand.kt  PotionMixerCommand.kt
src/main/kotlin/ru/potionmixer/config/: ConfigManager.kt  MessageManager.kt
src/main/kotlin/ru/potionmixer/gui/: CauldronGUIManager.kt
src/main/kotlin/ru/potionmixer/listeners/: CauldronInteractionListener.kt  InventoryListener.kt
src/main/kotlin/ru/potionmixer/utils/: PotionEffectFormatter.kt
src/main/kotlin/ru/potionmixer/validation/: PotionMixingValidator.kt
src/main/resources/: config.yml  messages.yml
src/process/: process_manager.cpp  process_manager.h
src/utils/: logger.cpp  logger.h
